--- a/public/assets/styles.css
+++ b/public/assets/styles.css
@@ -28,6 +28,7 @@ input[type="text"]{
   float: left;
   font-size: 20px;
   color: #989898;
+  box-sizing: border-box;
 }
 
 button{
@@ -64,7 +65,7 @@ li:hover{
 }
 
 h1{
-  background: url(/logo.png) no-repeat center;
+  background: url(/assets/logo.png) no-repeat center;
   margin-bottom: 0;
   text-indent: -10000px;
 }
